Fixed several problems
